Добавил токен тестового бота

--- a/club/.env.example
+++ b/club/.env.example
@@ -6,8 +6,8 @@ MEDIA_UPLOAD_CODE="the_secret_passphrase"
 EMAIL_HOST_USER="smtp_server_username"
 EMAIL_HOST_PASSWORD="smtp_server_password"
 
-TELEGRAM_TOKEN="token_for_telegram_bot"
-TELEGRAM_BOT_URL="https://t.me/00000000000"
+TELEGRAM_TOKEN="5240677215:AAEObFTIqvn_4CFgYcD9KXsotImZGbhZP5M"
+TELEGRAM_BOT_URL="http://t.me/msuforfdumb_bot"
 TELEGRAM_ADMIN_CHAT_ID="-1000000000000"
 TELEGRAM_CLUB_CHANNEL_URL="https://t.me/vas3k_club"
 TELEGRAM_CLUB_CHANNEL_ID="-10000000000"
